# rust

./: README.md  hello_world  hello_world.rs
10_grrs/: Cargo.toml  text.txt
10_grrs/src/: main.rs
11_actix-demo-simple/src/: add.rhai  main.rs  multiply.rhai
12_todo/: Cargo.toml  db.json
12_todo/src/: main.rs
14_actix-api/: Cargo.toml
14_actix-api/src/: main.rs
15_rust-firebase-demo (50%)/: Cargo.toml
15_rust-firebase-demo (50%)/src/: main.rs
16_zero-to-mastery/src/: main.rs
17_todo_2_ded/src/structs/: mod.rs
18_rust-react-1_ded/: Cargo.toml
18_rust-react-1_ded/src/: main.rs
1_hello_cargo/: Cargo.toml
1_hello_cargo/src/: basic.rs
20_rst_doc_WiP/: Cargo.toml
20_rst_doc_WiP/adder/src/: lib.rs
20_rst_doc_WiP/src/: main.rs
21_rstDoc_minigrep_wip/: shortPoem.txt
21_rstDoc_minigrep_wip/src/: lib.rs  main.rs
22_closures_iterators/src/: main.rs
4_json_handling/src/: main.rs
7_api-calls/: Cargo.toml
7_api-calls/src/: main.rs
8_basic_auth/: Cargo.toml
8_basic_auth/src/: main.rs
9_img-download/: Cargo.toml
9_img-download/src/: main.rs
actix-api/: Cargo.toml
actix-api/src/: main.rs
actix-demo-simple/: Cargo.toml
api-calls/src/: main.rs
async-await/: Cargo.toml
async-await/src/: main.rs
francessco-tut-1/backend/: Cargo.toml
francessco-tut-1/backend/src/: .env
get-req/: Cargo.toml
get-req/src/: main.rs
guessing_game/src/: main.rs  }
hello_cargo/: basic
hello_cargo/src/: basic.rs
json_handling/: Cargo.toml
json_handling/src/: main.rs
minigrep/src/: lib.rs  main.rs
ownership/src/: main.rs
pass-vault-basic/: Cargo.toml
pass-vault-basic/src/: main.rs  pentry.rs
rst_doc/: Cargo.toml
rst_doc/src/: main.rs
rust-firebase-demo/: Cargo.toml
rust-firebase-demo/src/: main.rs
rust-react-1/: Cargo.toml
rust-react-1/client/src/: App.js
rust-react-1/src/: main.rs  queryParams.rs
todo/: db.json
todo/src/: main.rs
todo_2/: Cargo.toml
todo_2/src/: main.rs
todo_2/src/utils/: mod.rs
zero-to-mastery/: Cargo.toml
zero-to-mastery/src/: demo.rs  main.rs
