[package]
name = "rust-firebase-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.111"
firebase-rs = "2.0.9"
serde = "1.0.195"
tokio = { version = "*", features = ["full"] }
actix-web = { version = "4.4.1" }
