[package]
name = "rust-react-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_derive = "1.0.196"
actix-cors = "0.7.0"
image = "0.24.8"
