[package]
name = "api-calls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
error-chain = { version = "0.12.4" }
tokio = { version = "1.35.1", features = ["full"] }
