[package]
name = "img-download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.3.0"
error-chain = { version = "0.12.4" }
tokio = { version = "*", features = ["full"] }
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
