[package]
name = "zero-to-mastery"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
chrono = "0.4.33"
colorize = "0.1.0"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

# [[bin]]
# name = "mybin"
# path = "src/demo.rs"
